DT-2963: Add data location URL to emails that go to Researchers (#2830)